nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-html         
      volumes:
        - name: nextcloud-html
          persistentVolumeClaim:
            claimName: nextcloud-volume-claim
