nextcloud-mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-mariadb
  template:
    metadata:
      labels:
        app: nextcloud-mariadb
    spec:
      nodeSelector:
        kubernetes.io/hostname: slave-pi-1
      containers:
        - name: nextcloud-mariadb
          image: mariadb:lts
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadbdata
      volumes:
        - name: mariadbdata
          persistentVolumeClaim:
            claimName: nextcloud-mariadb-volume-claim
