nextcloud-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: nextcloud-mariadb
