local-nextcloud-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: local-nextcloud-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nextcloud.local`)
      priority: 10
      services:
        - name: nextcloud
          port: 80
